--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                 <div class="project-item" data-texts='["Saku Mirror 像一面安静的镜子，把散落的资源折成光。","Saku Mirror 为你加速访问世界的另一端。","Saku Mirror 让信息流动得更轻、更快。"]'>
                         <h3>Saku Mirror</h3>
                         <p class="project-desc"></p>
-                        <p><a href="#" target="_blank">More →</a></p>
+                        <p><a href="https://mirror.kazea.cn/" target="_blank">More →</a></p>
                     </div>
                     <div class="project-item" data-texts='["文字在空白中相遇，问题与回声同时醒来。","当思考变成声音，对话便拥有了形状。","时间停在输入框里，意义从发送键出发。"]'>
                         <h3>Mahiro Bot</h3>
                         <p class="project-desc"></p>
-                        <p><a href="#" target="_blank">GitHub Repo →</a></p>
+                        <p><a href="https://github.com/SkanaIS/Mahiro" target="_blank">GitHub Repo →</a></p>
                     </div>
                 </div>
 
