--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
 
                 <!-- 黄色小提示 -->
                 <div class="hint-container" id="join-hint">
-                    我们正在寻找一些志同道合的人一起交流思想、学习技术，<br>
-                    如果你也对此有兴趣的话欢迎加入我们的交流小组。<br>
-                    <strong>·试试到控制台找找线索吧？</strong>
+                    我们正在寻找一些志同道合的人一起交流思想、学习技术，如果你也对此有兴趣的话欢迎加入我们的交流小组。<br>
+                    <strong>[i]试试到控制台找找线索吧？</strong>
                 </div>
 
                 <footer>
@@ -88,3 +87,4 @@
 
 
 </html>
+
