--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <p class="project-desc"></p>
                         <p><a href="https://mirror.kazea.cn/" target="_blank">More →</a></p>
                     </div>
-                    <div class="project-item" data-texts='["文字在空白中相遇，问题与回声同时醒来。","当思考变成声音，对话便拥有了形状。","时间停在输入框里，意义从发送键出发。"]'>
+                    <div class="project-item" data-texts='["文字在空白中相遇，问题与回声同时醒来。","当思考变成声音，对话便拥有了形状。","时间停在输入框里，意义从发送键出发。","如果你仔细观察，某些符号会引导你到一个小小的出口——"]'>
                         <h3>Mahiro Bot</h3>
                         <p class="project-desc"></p>
                         <p><a href="https://github.com/SkanaIS/Mahiro" target="_blank">GitHub Repo →</a></p>
@@ -87,4 +87,5 @@
 
 
 </html>
+
 
