--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                 </div>
 
                 <footer>
-                    © 2026 Kazea ・ powered by <a href="#" style="color:#3b82f6;">Saku Cloud</a>
+                    © 2026 Kazea ・ powered by <a href="#" style="color:#3b82f6;">Saku Cloud</a><br>
+                    <img src="https://raw.githubusercontent.com/abumalick/powered-by-vercel/master/powered-by-vercel.svg" onclick="window.open('https://vercel.com')" alt="Powered by Vercel" style="height: 40px; margin-top: 10px; aspect-ratio: 212 / 44; cursor: pointer;">
                 </footer>
             </div>
         </div>
